--- a/0_introduction/0_Exercises.ipynb
+++ b/0_introduction/0_Exercises.ipynb
@@ -237,7 +237,7 @@
    "source": [
     "user_input = input(\"please write a sentence:\")\n",
     "words = user_input.split( )\n",
-    "a = sorted(words)\n",
+    "a = sorted(words,key = lambda x:x.lower())\n",
     "\n",
     "for words in a:\n",
     "    print (words)\n"
@@ -315,30 +315,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "d301c61b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n",
-      "1\n",
-      "2\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "7\n",
-      "9\n",
-      "12\n",
-      "16\n",
-      "21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 1\n",
     "b = 1\n",
