--- a/1_Algorithms/1_Exercises.ipynb
+++ b/1_Algorithms/1_Exercises.ipynb
@@ -136,13 +136,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 381,
    "id": "9d4bd6fb-0330-4a1f-a8f9-892c0757b176",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.10)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
+      "<VideoInfo(hw = 0, wm = 1,video_mem = 0\n",
+      "         blit_hw = 0, blit_hw_CC = 0, blit_hw_A = 0,\n",
+      "         blit_sw = 0, blit_sw_CC = 0, blit_sw_A = 0,\n",
+      "         bitsize  = 32, bytesize = 4,\n",
+      "         masks =  (0x00ff0000, 0x0000ff00, 0x000000ff, 0x00000000),\n",
+      "         shifts = (16, 8, 0, 0),\n",
+      "         losses =  (0, 0, 0, 8),\n",
+      "         current_w = 1920, current_h = 1080\n",
+      "         pixel_format = SDL_PIXELFORMAT_RGB888)\n",
+      ">\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"D:\\\\u82f1\\u56fd\\u7559\\u5b66\\u8d44\\u6599\\\\u82f1\\u56fd\\u7855\\u58eb\\u8bfe\\u7a0b\\ArchitectureDigital\\UD_SkillsIntroduction_2024-main\\UD_SkillsIntroduction_2024-main\\1_Algorithms\\Wall_E\\wall_eGame.py\", line 114, in <module>\n",
+      "    sys.exit()\n",
+      "    ^^^\n",
+      "NameError: name 'sys' is not defined\n"
+     ]
+    }
+   ],
    "source": [
     "!python Wall_E/wall_eGame.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83d6abe2-0b8d-44d4-80a1-30f4f46d5f3c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
